# CausticParser

./: .gitignore  .gitmodules  LICENSE  README.md  error.h  gentok.py  loader.py  parglare_compose.py  parser.peg  parser.py  parser_nowarn.c  pyproject.toml  tokens.py
ast/: cst.c  cst.h  node_free.c  node_printer.c  nodes.h
examples/: basic_parser.c  deserialize.c  serialize_parser.c
grammar/: atoms.peg  expression.peg  helper.h  loader.py  textxcompose.py  textxerror.py  whitespace.peg
scripts/: NOTE  build_parser.sh  build_protobuf.sh  cst2py.py
src/: error.c  error.h  parser.peg  parser_state.c  parser_state.h
src/ast/: node_free.c  node_printer.c  nodes.h  serialize.c  serialize.h
src/ast/nodes/: access.h  atoms.h  block.h  operators.h  procedures.h  statements.h  types.h
src/caustic/parser/: __init__.py  actions.py  cli.py  error.py
src/grammar/: access.peg  atoms.peg  block.peg  expression.peg  helper.h  invoke.peg  keywords.peg  parser.peg  procedure.peg  statements.peg  types.peg  whitespace.peg
